--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.14.159",
+    "sass": "^1.80.7",
     "vue": "latest",
     "vue-router": "latest"
   }
